refactor(get_page): rename to get_page_size

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(as_unit_type)
 export(convert_page_units)
 export(convert_unit_type)
 export(get_card)
-export(get_page)
 export(get_page_dims)
+export(get_page_size)
 export(get_paper)
 export(is_same_unit_type)
 export(layout_cards)
