refactor: update DESCRIPTION + NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,26 @@
 
 export(as_unit)
 export(as_unit_type)
+export(convert_dist_scale)
+export(convert_dist_units)
 export(convert_page_units)
 export(convert_unit_type)
 export(get_card)
+export(get_dist_units)
 export(get_page_dims)
 export(get_page_size)
 export(get_paper)
+export(get_scale)
+export(is_dist_units)
 export(is_same_unit_type)
-export(layout_cards)
+export(is_same_units)
+export(page_layout)
 export(plot_cards)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_warn)
+importFrom(cliExtras,cli_abort_if)
+importFrom(cliExtras,cli_abort_ifnot)
+importFrom(cliExtras,cli_warn_ifnot)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,geom_text)
@@ -28,6 +37,8 @@ importFrom(patchwork,wrap_plots)
 importFrom(rlang,"%||%")
 importFrom(rlang,arg_match)
 importFrom(rlang,caller_arg)
+importFrom(rlang,caller_env)
+importFrom(rlang,check_installed)
 importFrom(rlang,has_name)
 importFrom(rlang,is_named)
 importFrom(rlang,local_use_cli)
@@ -35,3 +46,5 @@ importFrom(rlang,on_load)
 importFrom(rlang,run_on_load)
 importFrom(rlang,set_names)
 importFrom(rlang,try_fetch)
+importFrom(units,as_units)
+importFrom(units,set_units)
