--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,14 +17,19 @@ Depends:
     R (>= 2.10)
 Imports: 
     cli,
+    cliExtras (>= 0.1.0),
     ggplot2,
     grid,
     patchwork,
-    rlang
+    rlang,
+    units
 Suggests: 
+    sf,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Remotes: 
+    elipousson/cliExtras
