--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(rlang,arg_match)
 importFrom(rlang,caller_arg)
 importFrom(rlang,caller_env)
 importFrom(rlang,check_installed)
+importFrom(rlang,has_length)
 importFrom(rlang,has_name)
 importFrom(rlang,is_named)
 importFrom(rlang,local_use_cli)
