feat: add make_page_size function
- feat: add make_page_size function
- refactor: update set_page_orientation to add orientation col if it is not provided
- docs: fill in missing parameter definitions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_scale)
 export(is_dist_units)
 export(is_same_unit_type)
 export(is_same_units)
+export(make_page_size)
 export(page_layout)
 export(plot_cards)
 importFrom(cli,cli_abort)
@@ -39,6 +40,7 @@ importFrom(rlang,arg_match)
 importFrom(rlang,caller_arg)
 importFrom(rlang,caller_env)
 importFrom(rlang,check_installed)
+importFrom(rlang,check_required)
 importFrom(rlang,has_length)
 importFrom(rlang,has_name)
 importFrom(rlang,is_named)
