refactor: update NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,17 +8,24 @@ export(convert_page_units)
 export(convert_unit_type)
 export(get_card)
 export(get_dist_units)
+export(get_margin)
 export(get_page_dims)
 export(get_page_size)
 export(get_paper)
 export(get_scale)
+export(get_social_size)
 export(is_dist_units)
+export(is_margin)
 export(is_same_unit_type)
 export(is_same_units)
+export(is_unit_type)
 export(make_page_size)
+export(margin)
+export(margins)
 export(page_layout)
 export(plot_cards)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_warn)
 importFrom(cliExtras,cli_abort_if)
 importFrom(cliExtras,cli_abort_ifnot)
@@ -46,6 +53,8 @@ importFrom(rlang,has_name)
 importFrom(rlang,is_named)
 importFrom(rlang,local_use_cli)
 importFrom(rlang,on_load)
+importFrom(rlang,quo_squash)
+importFrom(rlang,quos)
 importFrom(rlang,run_on_load)
 importFrom(rlang,set_names)
 importFrom(rlang,try_fetch)
