refactor: move grid back into Imports
- refactor: move grid back into Imports (it is a base package!)
- docs: fill missing parameter definitions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,12 +31,16 @@ export(page_to_viewport)
 export(plot_cards)
 export(set_page_margin)
 importFrom(cli,cli_abort)
-importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_warn)
 importFrom(cliExtras,cli_abort_if)
 importFrom(cliExtras,cli_abort_ifnot)
 importFrom(cliExtras,cli_warn_ifnot)
 importFrom(cliExtras,cli_yesno)
+importFrom(grid,convertUnit)
+importFrom(grid,grid.layout)
+importFrom(grid,unit)
+importFrom(grid,unitType)
+importFrom(grid,viewport)
 importFrom(rlang,"%||%")
 importFrom(rlang,arg_match)
 importFrom(rlang,caller_arg)
