--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,14 +81,16 @@ importFrom(rlang,exec)
 importFrom(rlang,fn_fmls)
 importFrom(rlang,has_length)
 importFrom(rlang,has_name)
+importFrom(rlang,is_interactive)
 importFrom(rlang,is_missing)
 importFrom(rlang,is_named)
 importFrom(rlang,list2)
 importFrom(rlang,local_use_cli)
 importFrom(rlang,on_load)
-importFrom(rlang,quo_squash)
-importFrom(rlang,quos)
 importFrom(rlang,run_on_load)
 importFrom(rlang,set_names)
 importFrom(rlang,try_fetch)
+importFrom(units,as_units)
+importFrom(units,drop_units)
+importFrom(units,set_units)
 importFrom(utils,modifyList)
