refactor: use rlang consistently for type checking

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,9 +64,9 @@ importFrom(grid,unit)
 importFrom(grid,unitType)
 importFrom(grid,viewport)
 importFrom(lifecycle,deprecated)
-importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(rlang,`%||%`)
 importFrom(rlang,arg_match)
 importFrom(rlang,as_label)
 importFrom(rlang,as_name)
@@ -80,9 +80,14 @@ importFrom(rlang,exec)
 importFrom(rlang,fn_fmls)
 importFrom(rlang,has_length)
 importFrom(rlang,has_name)
+importFrom(rlang,is_bare_numeric)
+importFrom(rlang,is_character)
 importFrom(rlang,is_interactive)
 importFrom(rlang,is_missing)
 importFrom(rlang,is_named)
+importFrom(rlang,is_null)
+importFrom(rlang,is_string)
+importFrom(rlang,is_true)
 importFrom(rlang,list2)
 importFrom(rlang,local_use_cli)
 importFrom(rlang,on_load)
