--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,6 @@ importFrom(cliExtras,cli_abort_if)
 importFrom(cliExtras,cli_abort_ifnot)
 importFrom(cliExtras,cli_warn_ifnot)
 importFrom(cliExtras,cli_yesno)
-importFrom(cliExtras,set_cli_quiet)
 importFrom(glue,glue)
 importFrom(grid,convertUnit)
 importFrom(grid,grid.layout)
@@ -97,4 +96,5 @@ importFrom(rlang,try_fetch)
 importFrom(units,as_units)
 importFrom(units,drop_units)
 importFrom(units,set_units)
+importFrom(utils,as.roman)
 importFrom(utils,modifyList)
