--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(is_margin)
 export(is_same_unit_type)
 export(is_same_units)
 export(is_unit_type)
+export(make_contact_sheets)
 export(make_page_size)
 export(map_ggsave_ext)
 export(margin)
@@ -51,6 +52,8 @@ importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_bullets)
+importFrom(cli,cli_progress_step)
+importFrom(cli,cli_progress_update)
 importFrom(cli,cli_warn)
 importFrom(cliExtras,cli_abort_if)
 importFrom(cliExtras,cli_abort_ifnot)
