refactor: drop tidyeval import
Also style: remove cli and rlang prefixes and fix vector logic operators

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     lifecycle,
     rlang (>= 1.1.0),
     units,
-    utils
+    utils,
+    vctrs
 Suggests: 
     covr,
     filenamr,
